--- a/cloudFrontEnd/src/app/reset-password/reset-password.component.html
+++ b/cloudFrontEnd/src/app/reset-password/reset-password.component.html
@@ -9,7 +9,7 @@
              [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
       </div>
       <div>
-        <mat-form-field appearance="standard">
+        <mat-form-field appearance="outline">
           <mat-label>New Password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('newPassword')"
                  matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
@@ -22,7 +22,7 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-form-field appearance="standard">
+        <mat-form-field appearance="outline">
           <mat-label>Confirm new password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('confirmNewPassword')"
                  matTooltip="Enter the new password again"
@@ -36,10 +36,10 @@
         </mat-form-field>
       </div>
       <div class="button-container">
-        <button mat-raised-button (click)="exit()" color="default">
+        <button mat-raised-button (click)="exit()" color="cancel">
           {{successMessage==''?'Cancel':'Exit'}}
         </button>
-        <button mat-raised-button [disabled]="anyInvalid() || successMessage != ''" (click)="formSubmitted()" color="warning">
+        <button mat-raised-button [disabled]="anyInvalid() || successMessage != ''" (click)="formSubmitted()" color="warn">
           Reset Password
         </button>
       </div>
