--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -12,7 +12,7 @@
       <div class="alert-success mat-elevation-z4"
            [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
     </div>
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="outline">
       <mat-label>Filter Text</mat-label>
       <input matInput type="text"
              name="uniquename"
@@ -169,13 +169,13 @@
                     </mat-card>
                     <br>
                     <span class="cam-creds-confirm-group">
-                      <button color="default" mat-flat-button (click)="showChangePasswordForm(acc)"
+                      <button color="cancel" mat-raised-button (click)="showChangePasswordForm(acc)"
                               matTooltip="Close the change password form"
                               matTooltipClass="tooltip">
                         Cancel
                       </button>
                               <span>&nbsp;&nbsp;</span>
-                      <button color="warning" mat-flat-button
+                      <button color="warn" mat-raised-button
                               [disabled]="anyInvalid() || successMessage != ''"
                               (click)="changePassword(acc)"
                               matTooltip="Save the change to the {{acc.username}} account password"
@@ -211,13 +211,13 @@
                     </mat-card>
                     <br>
                     <span>
-                      <button color="default" mat-flat-button (click)="showChangeEmailForm(acc)"
+                      <button color="cancel" mat-raised-button (click)="showChangeEmailForm(acc)"
                               matTooltip="Close the change email address form"
                               matTooltipClass="tooltip">
                         Cancel
                       </button>
                               <span>&nbsp;&nbsp;</span>
-                      <button color="warning" mat-flat-button
+                      <button color="warn" mat-raised-button
                               [disabled]="anyInvalidEmail() || successMessage != ''"
                               (click)="changeEmail(acc)"
                               matTooltip="Save the change to the {{acc.username}} account email address"
@@ -234,13 +234,13 @@
                       <mat-card-title>Delete this account, Are you sure?</mat-card-title>
                       <mat-card-content>
                     <span>
-                      <button color="default" mat-flat-button (click)="confirmDelete(acc)"
+                      <button color="cancel" mat-raised-button (click)="confirmDelete(acc)"
                               matTooltip="Close the delete account form, and leave the account active"
                               matTooltipClass="tooltip">
                         Cancel
                       </button>
                               <span>&nbsp;&nbsp;</span>
-                      <button color="warning" mat-flat-button
+                      <button color="warn" mat-raised-button
                               (click)="deleteAccount(acc)"
                               matTooltip="Delete the {{acc.username}} account"
                               matTooltipClass="tooltip">
