--- a/cloudFrontEnd/src/app/change-email/change-email.component.html
+++ b/cloudFrontEnd/src/app/change-email/change-email.component.html
@@ -4,7 +4,7 @@
     <mat-card-content>
       <form (ngSubmit)="$event.preventDefault(); formSubmitted()" [formGroup]="changeEmailForm">
         <div>
-          <mat-form-field appearance="standard">
+          <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
             <input matInput type="password" formControlName="password"
                    autocomplete="off"
@@ -15,7 +15,7 @@
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="standard" class="email-input">
+          <mat-form-field appearance="outline" class="email-input">
             <mat-label>New email address</mat-label>
             <input matInput type="text" formControlName="newEmail" autocomplete="off" maxlength="40"
                    placeholder="New password">
@@ -26,7 +26,7 @@
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field appearance="standard" class="email-input">
+          <mat-form-field appearance="outline" class="email-input">
             <mat-label>Confirm new email address</mat-label>
             <input matInput type="text" formControlName="confirmNewEmail" autocomplete="off" maxlength="40"
                    placeholder="Confirm new email address">
@@ -37,7 +37,7 @@
           </mat-form-field>
         </div>
         <div class="button-container">
-          <button mat-raised-button [disabled]="changeEmailButtonDisabled()" color="warning">Change Email</button>
+          <button mat-raised-button [disabled]="changeEmailButtonDisabled()" color="warn">Change Email</button>
         </div>
       </form>
     </mat-card-content>
