--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -27,17 +27,23 @@
     </div>
   </mat-card-title>
   <app-reporting #errorReporting></app-reporting>
-  <mat-card-content class="wait-box mat-form-field-flex" *ngIf="downloading">
+    <mat-card-content *ngIf="downloading" class="wait-box">
+        <span>
     <mat-spinner [diameter]="25"></mat-spinner>
-    <span>Loading, Please wait..</span>
+            Loading, Please wait..
+        </span>
   </mat-card-content>
-  <mat-card-content class="wait-box mat-form-field-flex" *ngIf="updating">
-    <mat-spinner [diameter]="25"></mat-spinner>
-    <span>Updating Cameras Data, Please wait..</span>
+    <mat-card-content *ngIf="updating" class="wait-box">
+        <span>
+            <mat-spinner [diameter]="25" color="accent" mode="indeterminate"></mat-spinner>
+            Updating Cameras Data, Please wait..
+        </span>
   </mat-card-content>
-  <mat-card-content class="wait-box mat-form-field-flex" *ngIf="discovering">
+    <mat-card-content *ngIf="discovering" class="wait-box">
+        <span>
     <mat-spinner [diameter]="25"></mat-spinner>
-    <span>Camera discovery active, Please wait..</span>
+            Camera discovery active, Please wait..
+        </span>
   </mat-card-content>
   <mat-card-content #scrollable_content class="scrollable-content"
                     [style]="utils.getScrollableContentStyle(scrollableContent?.nativeElement)"
@@ -124,36 +130,38 @@
 
 
       <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>Delete</th>
-        <td mat-cell *matCellDef="let cam">
-          <button mat-icon-button matTooltip="Delete {{cam.key}}" matTooltipClass="tooltip"
-                  [disabled]="cameras.size <= 1 || confirmSave || confirmNew"
-                  (click)="deleteCamera(cam.key)">
-            <mat-icon>delete</mat-icon>
+                <th *matHeaderCellDef mat-header-cell>Delete</th>
+                <td *matCellDef="let cam" mat-cell>
+                    <button (click)="deleteCamera(cam.key)" [disabled]="cameras.size <= 1 || confirmSave || confirmNew"
+                            mat-icon-button matTooltip="Delete {{cam.key}}" matTooltipClass="tooltip">
+                        <mat-icon class="trash-can">delete</mat-icon>
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="expand">
-        <th mat-header-cell *matHeaderCellDef>Expand</th>
-        <td mat-cell *matCellDef="let cam" (click)="toggle(cam)">
+                <th *matHeaderCellDef mat-header-cell>Expand</th>
+                <td (click)="toggle(cam)" *matCellDef="let cam" mat-cell>
           <button mat-icon-button
                   matTooltip="{{expandedElement == cam.value ? 'Hide' : 'Show'}} the streams for {{cam.key}}"
                   matTooltipClass="tooltip">
-            <mat-icon class="expand" [@openClose]="expandedElement == cam.value ? 'open' : 'closed'">arrow_right
+                        <mat-icon [@openClose]="expandedElement == cam.value ? 'open' : 'closed'" class="expand">
+                            arrow_right
             </mat-icon>
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name.</th>
-        <td mat-cell *matCellDef="let cam; dataIndex as i">
-          <mat-form-field appearance="legacy" [style.width.px]="180">
-            <input matInput type="text" autocomplete="off" maxlength="25" [formControl]="getCamControl(i, 'name')"
+                <th *matHeaderCellDef mat-header-cell>Name.</th>
+                <td *matCellDef="let cam; dataIndex as i" mat-cell>
+                    <mat-form-field [style.width.px]="180" appearance="outline">
+                        <mat-label>Camera name</mat-label>
+                        <input (change)="updateCamField(i, 'name')" [formControl]="getCamControl(i, 'name')"
+                               autocomplete="off" matInput
                    matTooltip="Enter the name to identify {{cam.key}} in the menus"
                    matTooltipClass="tooltip"
-                   placeholder="Camera Name" (change)="updateCamField(i, 'name')">
+                   placeholder="Camera Name">
             <mat-error *ngIf="getCamControl(i, 'name').invalid">Camera name is required</mat-error>
           </mat-form-field>
         </td>
@@ -162,7 +170,7 @@
       <ng-container matColumnDef="cameraParamSpecs">
         <th mat-header-cell *matHeaderCellDef>Camera Type.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="150">
+          <mat-form-field appearance="outline" [style.width.px]="150">
             <!--Call setUpTableFormControls after  updateCamField on changed selection to ensure the address field
                 enabled state is updated.-->
             <mat-select [formControl]="getCamControl(i, 'cameraParamSpecs')"
@@ -179,7 +187,7 @@
       <ng-container matColumnDef="ftp">
         <th mat-header-cell *matHeaderCellDef>FTP From Camera.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="85">
+          <mat-form-field appearance="outline" [style.width.px]="85">
             <mat-select [formControl]="getCamControl(i, 'ftp')"
                         (selectionChange)="updateCamField(i, 'ftp')"
                         [disableControl]="getFTPDisabledState(cam.value)"
@@ -197,7 +205,7 @@
       <ng-container matColumnDef="retrigger-window">
         <th mat-header-cell *matHeaderCellDef>Retrigger Window.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="50">
+          <mat-form-field appearance="outline" [style.width.px]="50">
             <mat-select [formControl]="getCamControl(i, 'retriggerWindow')"
                         (selectionChange)="updateCamField(i, 'retriggerWindow')"
                         [disableControl]="cam.value.ftp == 'none'"
@@ -214,7 +222,7 @@
       <ng-container matColumnDef="address">
         <th mat-header-cell *matHeaderCellDef>Address.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="180">
+          <mat-form-field appearance="outline" [style.width.px]="180">
             <input matInput type="text" autocomplete="off" maxlength="15" [formControl]="getCamControl(i, 'address')"
                    matTooltip="The IP address of {{cam.key}}. This is required if the ControlURI is set to anything other than 'None'."
                    matTooltipClass="tooltip"
@@ -227,7 +235,7 @@
       <ng-container matColumnDef="snapshotUri">
         <th mat-header-cell *matHeaderCellDef>Snapshot URI.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="300">
+          <mat-form-field appearance="outline" [style.width.px]="300">
             <input matInput type="text" autocomplete="off" maxlength="150"
                    [formControl]="getCamControl(i, 'snapshotUri')"
                    matTooltip="The URI for snapshots for {{cam.key}}. This is used to view the image from the camera by clicking on the camera ID in the Cameras Configuration editor."
@@ -253,7 +261,7 @@
       <ng-container matColumnDef="rtspTransport">
         <th mat-header-cell *matHeaderCellDef>RTSP Transport.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="75">
+          <mat-form-field appearance="outline" [style.width.px]="75">
             <!--Call setUpTableFormControls after  updateCamField on changed selection to ensure the address field
                 enabled state is updated.-->
             <mat-select [formControl]="getCamControl(i, 'rtspTransport')"
@@ -298,7 +306,7 @@
       <ng-container matColumnDef="onvifHost">
         <th mat-header-cell *matHeaderCellDef>ONVIF Base Address.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="legacy" [style.width.px]="200">
+          <mat-form-field appearance="outline" [style.width.px]="200">
             <input matInput type="text" autocomplete="off" maxlength="22"
                    [formControl]="getCamControl(i, 'onvifHost')"
                    matTooltip="The IP address and port (if not 80) for {{cam.key}} ONVIF operations. This is required if PTZ control is enabled for {{cam.key}}."
@@ -338,7 +346,7 @@
               <ng-container matColumnDef="descr">
                 <th mat-header-cell *matHeaderCellDef> Descr.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy">
+                  <mat-form-field appearance="outline">
                     <input matInput type="text" autocomplete="off" maxlength="20"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'descr')"
                            matTooltip="Set the description for {{stream.key}}. This is usually relating to the resolution of the stream."
@@ -372,7 +380,7 @@
               <ng-container matColumnDef="audio_encoding">
                 <th mat-header-cell *matHeaderCellDef>Audio Encoding</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="90">
+                  <mat-form-field appearance="outline" [style.width.px]="90">
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'audio_encoding')"
                                 (selectionChange)="updateAudioEncoding($event, stream.value)"
                                 matTooltip="Set the audio encoding (G711 or AAC) for {{stream.key}}. If you are unsure, select 'Not Listed'"
@@ -393,7 +401,7 @@
               <ng-container matColumnDef="netcam_uri">
                 <th mat-header-cell *matHeaderCellDef> Netcam URI.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy">
+                  <mat-form-field appearance="outline">
                     <input matInput type="text" autocomplete="off" maxlength="105"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'netcam_uri')"
                            matTooltip="Set the URI for connection to the camera stream. This is in the form 'rtsp://<ip address>/<uri>"
@@ -438,7 +446,7 @@
               <ng-container matColumnDef="threshold">
                 <th mat-header-cell *matHeaderCellDef>Motion Threshold</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index" [style.width.px]="100">
-                  <mat-form-field appearance="legacy"  [style.width.px]="95">
+                  <mat-form-field appearance="outline"  [style.width.px]="95">
                     <input matInput type="number" autocomplete="off" maxlength="10"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'threshold')"
                            [disableControl]="!stream.value.motion.enabled"
@@ -461,7 +469,7 @@
               <ng-container matColumnDef="trigger_recording_on">
                 <th mat-header-cell *matHeaderCellDef>Trigger Recording On</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="80">
+                  <mat-form-field appearance="outline" [style.width.px]="80">
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'trigger_recording_on')"
                                 (selectionChange)="setRecordingTrigger($event, stream.value)"
                                 [disableControl]="!stream.value.motion.enabled"
@@ -482,7 +490,7 @@
               <ng-container matColumnDef="preambleFrames">
                 <th mat-header-cell *matHeaderCellDef>Preamble Frames.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="50">
+                  <mat-form-field appearance="outline" [style.width.px]="50">
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'preambleFrames')"
                                 (selectionChange)="updateStreamField(camIndex, streamIndex, 'preambleFrames')"
                                 [disableControl]="getPreambleFramesDisabledState(cam.value, stream.value)"
@@ -498,7 +506,7 @@
               <ng-container matColumnDef="mask_file">
                 <th mat-header-cell *matHeaderCellDef> Mask File</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="220">
+                  <mat-form-field appearance="outline" [style.width.px]="220">
                     <input style="position: absolute"
                            hidden #fileInput type="file" accept=".pgm"
                            (change)="uploadMaskFile($event, cam.key, camIndex, streamIndex)"/>
@@ -530,7 +538,7 @@
               <ng-container matColumnDef="video_width">
                 <th mat-header-cell *matHeaderCellDef> Video Width</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="80">
+                  <mat-form-field appearance="outline" [style.width.px]="80">
                     <input matInput type="number" autocomplete="off" maxlength="4"
                            [formControl]="getStreamControl(camIndex, streamIndex,'video_width')"
                            matTooltip="The width in pixels of the video on {{stream.key}}. This is required if motion detection is enabled on {{stream.key}}."
@@ -544,7 +552,7 @@
               <ng-container matColumnDef="video_height">
                 <th mat-header-cell *matHeaderCellDef> Video Height</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="legacy" [style.width.px]="80">
+                  <mat-form-field appearance="outline" [style.width.px]="80">
                     <input matInput type="number" autocomplete="off" maxlength="4"
                            [formControl]="getStreamControl(camIndex, streamIndex,'video_height')"
                            matTooltip="The height in pixels of the video on {{stream.key}}. This is required if motion detection is enabled on {{stream.key}}."
@@ -635,28 +643,28 @@
 
             <span class="confirm-group" *ngIf="confirmNew">
             <span>Start a new configuration, are you sure?</span>
-            <button color="default" mat-flat-button (click)="confirmNew=false">
+            <button color="cancel" mat-raised-button (click)="confirmNew=false">
               Cancel
             </button>
-            <button color="warning" mat-flat-button (click)="createNew();confirmNew=false;">
+            <button color="warn" mat-raised-button (click)="createNew();confirmNew=false;">
               New
             </button>
           </span>
             <span class="confirm-group" *ngIf="confirmNewLookup">
             <span>Start Onvif camera search, are you sure?</span>
-            <button color="default" mat-flat-button (click)="confirmNewLookup=false">
+            <button color="cancel" mat-raised-button (click)="confirmNewLookup=false">
               Cancel
             </button>
-            <button color="warning" mat-flat-button (click)="startOnvifSearch();confirmNewLookup=false;">
+            <button color="warn" mat-raised-button (click)="startOnvifSearch();confirmNewLookup=false;">
               Search
             </button>
           </span>
             <span class="confirm-group" *ngIf="confirmSave">
             <span>Save this as the working configuration, are you sure?</span>
-            <button color="default" mat-flat-button (click)="confirmSave=false">
+            <button color="cancel" mat-raised-button (click)="confirmSave=false">
               Cancel
             </button>
-            <button color="warning" mat-flat-button [disabled]="isGuest" (click)="commitConfig();confirmSave=false;">
+            <button color="warn" mat-raised-button [disabled]="isGuest" (click)="commitConfig();confirmSave=false;">
               Save
             </button>
           </span>
