--- a/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
+++ b/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.html
@@ -8,27 +8,27 @@
         <div class="alert-success mat-elevation-z4" [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
       </div>
       <div>
-        <mat-form-field appearance="legacy" class="email-input">
+        <mat-form-field appearance="outline" class="email-input">
           <input matInput type="text" autocomplete="off" maxlength="60"
                  [formControl]="getFormControl('email')"
                  (beforeinput)="confirmOnReturn($event)"
                  matTooltip="Enter your email address."
                  matTooltipClass="tooltip"
                  placeholder="Email address">
-          <mat-hint>Your email address</mat-hint>
+          <mat-label>Your email address</mat-label>
           <mat-error *ngIf="forgottenPasswordForm.controls['email'].hasError('email')">Invalid email address</mat-error>
           <mat-error *ngIf="forgottenPasswordForm.controls['email'].hasError('required')">Email address is required</mat-error>
         </mat-form-field>
       </div>
       <br>
       <span>
-      <button color="default" mat-flat-button (click)="hideForm()"
+      <button color="cancel" mat-raised-button (click)="hideForm()"
               matTooltip="Close this dialogue and return to the login form"
               matTooltipClass="tooltip">
         Cancel
       </button>
               <span>&nbsp;&nbsp;</span>
-      <button color="warning" mat-flat-button
+      <button color="warn" mat-raised-button
               [disabled]="anyInvalid()"
               (click)="sendLink()"
               matTooltip="Submit the email address to receive a link to reset your password"
