--- a/cloudFrontEnd/src/app/login/login.component.html
+++ b/cloudFrontEnd/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
       </div>
       <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+          <mat-form-field appearance="outline" [style.width.px]="225">
           <input #username matInput type="text" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('username')"
                  (beforeinput)="confirmOnReturn($event)"
@@ -20,8 +20,7 @@
         </mat-form-field>
       </div>
 
-      <div>
-        <mat-form-field appearance="legacy" [style.width.px]="225">
+        <mat-form-field appearance="outline" [style.width.px]="225">
           <input matInput type="password" autocomplete="off" maxlength="25"
                  [formControl]="getFormControl('password')"
                  (beforeinput)="confirmOnReturn($event)"
@@ -42,20 +41,16 @@
                         (change)="rememberMe=$event.checked">Remember Me
           </mat-checkbox>
         </div>
-       </div>
-      <br>
-      <div>
-        Forgotten <a class="forgot-password" href="/#/forgotpassword">password</a> ?
-      </div>
+        <a class="forgot-password" href="/#/forgotpassword">Forgotten password ?</a>
       <br>
       <span>
-      <button color="default" mat-flat-button (click)="hideLoginForm()"
+      <button color="cancel" mat-raised-button (click)="hideLoginForm()"
               matTooltip="Close this dialogue and leave the existing user name and password in place"
               matTooltipClass="tooltip">
         Cancel
       </button>
               <span>&nbsp;&nbsp;</span>
-      <button color="warning" mat-flat-button
+      <button color="warn" mat-raised-button
               [disabled]="anyInvalid()"
               (click)="login()"
               matTooltip="Login into the CCTV Cloud Service with the given username and password"
