--- a/cloudFrontEnd/src/app/nav/nav.component.scss
+++ b/cloudFrontEnd/src/app/nav/nav.component.scss
@@ -23,15 +23,29 @@ mat-card.confirm-logout {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   background-color: #e5e1e1;
+  position: relative;
   // Home icon (videocam)
   > a {
+    transform: scale(1.4);
+    top: 10px;
+    height: 40px;
+    width: 40px;
     color: #2d2d2d;
+  }
+
+  > div {
+    > div {
+      > button {
+        color: #2d2d2d;
+      }
+    }
   }
 
   // Temperature indicator
   > div:nth-child(2) {
     display: inline-block;
     > div {
+      margin-left: -0.125rem;
       transform: scale(0.75);
       width: fit-content;
       padding: 0.25rem;
@@ -45,7 +59,8 @@ mat-card.confirm-logout {
     @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) {
       display: none;
     }
-    display: inline;
+   // display: inline;
+    margin-top: 3px;
     float: right;
   }
 
@@ -90,6 +105,10 @@ div.float-right-on-full-width
 
 .navbar-toggler {
   order: 10;
+
+  > mat-icon {
+    color: black;
+  }
 }
 
 div.no-transport-warning {
@@ -106,11 +125,7 @@ div.no-transport-warning {
       background-color: transparent
     }
   }
-}
 
-.audio-out-active {
-  animation: pulsing 1300ms infinite;
-}
 @keyframes pulsing {
   0% {
     color: red;
@@ -121,4 +136,6 @@ div.no-transport-warning {
   100% {
     color: red;
   }
+}
+
 }
