--- a/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
+++ b/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="prod_id_input-container register-account-input" appearance="legacy">
+<mat-form-field class="prod_id_input-container register-account-input" appearance="outline">
   <input #productIdCtl matInput type="text" autocomplete="off" maxlength="19"
          [formControl]="getFormControl()"
          (focus)="setFocus()"
@@ -7,7 +7,7 @@
          matTooltip="Enter your NVR Product ID. This will have been provided on a note with your NVR"
          matTooltipClass="tooltip"
          placeholder="NVR Product ID">
-  <mat-hint>The 16 character product ID of your NVR</mat-hint>
+  <mat-label>The 16 character product ID of your NVR</mat-label>
   <mat-error *ngIf="formControl.hasError('pattern')">All 16 characters of the product ID are required
   </mat-error>
 </mat-form-field>
