--- a/cloudFrontEnd/src/app/reset-password/reset-password.component.scss
+++ b/cloudFrontEnd/src/app/reset-password/reset-password.component.scss
@@ -1,7 +1,7 @@
 .reset-password-container
 {
   margin-top: 1rem;
-  font-size: 2rem;
+  font-size: 16px;
   display: inline-flex;
   width: 100%;
   >mat-card
