--- a/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
+++ b/cloudFrontEnd/src/app/wifi-settings/wifi-settings.component.scss
@@ -1,7 +1,7 @@
 .wifi-settings-container
 {
   margin-top: 1rem;
-  font-size: 2rem;
+  font-size: 16px;
   display: inline-flex;
   width: 100%;
   >mat-card
@@ -38,15 +38,22 @@ span.connecting-spinner {
   position: relative;;
   top: 0.5rem;
   display: flex;
+  color: white;
   > mat-spinner {
+    position: relative;
+    top: -5px;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
   }
 }
 
 div.loading-spinner {
+  position: relative;
+  top: 0.5rem;
   display: flex;
   > mat-spinner {
+    position: relative;
+    top: -5px;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
   }
