--- a/cloudFrontEnd/src/app/about/about.component.scss
+++ b/cloudFrontEnd/src/app/about/about.component.scss
@@ -14,6 +14,9 @@ $about-box-fixed-content-height: 250px;
     width: 450px;
     margin-left: auto;
     margin-right: auto;
+    > mat-card-title {
+      color: black;
+    }
     > mat-card-content {
       > :nth-child(6) {
         margin: 0.3rem;
@@ -36,6 +39,9 @@ $about-box-fixed-content-height: 250px;
   width: 100%;
   >mat-card
   {
+    > mat-card-title {
+      color: black;
+    }
     background-color: white;
     color: black;
     width: fit-content;
