--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -93,7 +93,7 @@
       </ng-container>
 
       <ng-container matColumnDef="productId">
-        <th mat-sort-header="productId" *matHeaderCellDef
+        <th *matHeaderCellDef
             matTooltip="Sort by productId"
             matTooltipClass="tooltip">ProductId
         </th>
@@ -115,7 +115,7 @@
       </ng-container>
 
       <ng-container matColumnDef="userName">
-        <th mat-sort-header="userName" *matHeaderCellDef
+        <th *matHeaderCellDef
             matTooltip="Sort by userId"
             matTooltipClass="tooltip">Username
         </th>
@@ -137,7 +137,7 @@
 
       <!-- Expanded Streams Column - The streams row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedEditRow">
-        <td mat-cell *matCellDef="let account; let accIndex=dataIndex" [attr.colspan]="displayedColumns.length">
+        <td mat-cell *matCellDef="let account" [attr.colspan]="displayedColumns.length">
           <div class="edit-element-detail mat-elevation-z10"
                [@detailExpand]="account == expandedElement ? 'expanded' : 'collapsed'">
             <table [dataSource]="[account]" mat-table class="mat-elevation-z10">
