--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
@@ -129,3 +129,7 @@ tr.edit-element-row:not(.edit-expanded-row):active {
 .mat-column-nvrConnected {
   width: 6%;
 }
+
+mat-icon {
+  font-size: 24px !important;
+}
