* Change mat-hint to mat lable in onvif credentials component

--- a/cloudFrontEnd/src/app/config-setup/camera-credentials/onvif-credentials.component.html
+++ b/cloudFrontEnd/src/app/config-setup/camera-credentials/onvif-credentials.component.html
@@ -9,7 +9,7 @@
                [matTooltip]="usernameTooltip"
                matTooltipClass="tooltip"
                placeholder="User name">
-        <mat-hint>Admin user name for the cameras</mat-hint>
+        <mat-label>Admin user name for the cameras</mat-label>
         <mat-error *ngIf="setPasswordForm.controls['cameraUserName'].hasError('pattern')">5 or more characters and
           numbers
         </mat-error>
@@ -24,7 +24,7 @@
                [matTooltip]="passwordTooltip"
                matTooltipClass="tooltip"
                placeholder="Password">
-        <mat-hint>Admin password for the cameras</mat-hint>
+        <mat-label>Admin password for the cameras</mat-label>
         <mat-error *ngIf="setPasswordForm.controls['cameraPassword'].hasError('pattern')">Upper, lower case, numbers
           and special chars
         </mat-error>
