* Update reporting component to that used on NVR.

--- a/cloudFrontEnd/src/styles.scss
+++ b/cloudFrontEnd/src/styles.scss
@@ -446,6 +446,7 @@ div.message-display {
   display: flex;
   margin-bottom: 1rem;
   > div {
+    font-size: medium;
     margin-bottom: 1rem;
     flex-grow: 2;
   }
