* Fix missing routes * Fix "Method call is ambiguous" on render in controller functions * Improve population of SMTP settings form

--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -155,11 +155,11 @@
 </div>
 <mat-card class="mat-elevation-z8 confirm-logout" *ngIf="confirmLogout">
   <mat-card-subtitle>
-    Logout from Security Cam, Are you sure?
+    Logout from Cloud, Are you sure?
   </mat-card-subtitle>
   <mat-card-content>
     <button mat-raised-button color="warn" (click)="logOff(true)">Confirm</button>
-    <button mat-raised-button color="primary" (click)="logOff(false)">Cancel</button>
+    <button mat-raised-button color="cancel" (click)="logOff(false)">Cancel</button>
   </mat-card-content>
 </mat-card>
 <div *ngIf="!utilsService.activeMQTransportActive" class="no-transport-warning">
