* Improve layout onm ActiveMQ credentials, change email and set up SMTP client components.

--- a/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
+++ b/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
@@ -1,12 +1,11 @@
 <div class="cloud-creds-setup-container">
   <mat-card class="mat-elevation-z8">
-    <mat-card-header>
-      <mat-card-title>{{title}}</mat-card-title>
-    </mat-card-header>
+    <mat-card-title>{{title}}</mat-card-title>
+      <br>
     <mat-card-content>
       <app-reporting [embedded]="true"></app-reporting>
       <div class="form-container">
-        <mat-form-field appearance="outline" class="set-activemq-creds-input">
+          <mat-form-field appearance="outline" class="set-activemq-creds-input" [style.width.px]="300">
           <input #username matInput type="text" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('username')"
                  (beforeinput)="confirmOnReturn($event)"
@@ -21,7 +20,7 @@
           <mat-error *ngIf="cloudCredsForm.controls['username'].hasError('required')">User name is required</mat-error>
           <mat-error *ngIf="cloudCredsForm.controls['username'].hasError('emptyWithPassword')">User name empty when password was not</mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="set-activemq-creds-input">
+          <mat-form-field appearance="outline" class="set-activemq-creds-input" [style.width.px]="300">
           <input matInput type="password" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('password')"
                  (beforeinput)="confirmOnReturn($event)"
@@ -37,7 +36,7 @@
           <mat-error *ngIf="cloudCredsForm.controls['password'].hasError('emptyWithUsername')">Password empty when username was not
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="set-activemq-creds-input">
+          <mat-form-field appearance="outline" class="set-activemq-creds-input" [style.width.px]="300">
           <input matInput type="password" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('confirmPassword')"
                  (beforeinput)="confirmOnReturn($event)"
@@ -49,7 +48,7 @@
           <mat-error *ngIf="cloudCredsForm.controls['confirmPassword'].hasError('notMatching')">Must match password
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="set-activemq-creds-input">
+          <mat-form-field appearance="outline" class="set-activemq-creds-input" [style.width.px]="300">
           <input matInput type="text" autocomplete="off" maxlength="25"
                  [formControl]="getFormControl('mqHost')"
                  (beforeinput)="confirmOnReturn($event)"
